# V-Engine

./: .gitignore  CMakeLists.txt  LICENSE
dependencies/vulkan/: vk_enum_string_helper.h  vulkan_profiles.hpp
dependencies/vulkan/utility/: vk_format_utils.h
shaders/: compile.bat
src/: main.cpp
src/backend/: file.cpp  file.h  glfw_backend.cpp  glfw_backend.h
src/controller/: app.cpp  app.h
src/logging/: logger.cpp  logger.h
src/renderer/: command.cpp  command.h  device.cpp  device.h  frame.cpp  frame.h  image.cpp  image.h  instance.cpp  instance.h  renderer.cpp  renderer.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  synchronisation.cpp  synchronisation.h
